Added link to logo

--- a/public/charts.html
+++ b/public/charts.html
@@ -156,7 +156,7 @@
   <body><!--[if IE 8]><div class="ie8"><![endif]-->
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
     <header class="styleguide--header">
-      <div class="styleguide--header--content"><img src="assets/images/ca-logo-hz-white-280px.svg"></div>
+      <div class="styleguide--header--content"><a href="index.html"><img src="assets/images/ca-logo-hz-white-280px.svg"></a></div>
     </header>
     <!--header.main-header
     .main-header__content.main-content
