--- a/public/cookie-monster.html
+++ b/public/cookie-monster.html
@@ -35,7 +35,7 @@
       </div>
     </div>
     <header class="styleguide--header">
-      <div class="styleguide--header--content"><img src="assets/images/ca-logo-hz-white-280px.svg"></div>
+      <div class="styleguide--header--content"><a href="index.html"><img src="assets/images/ca-logo-hz-white-280px.svg"></a></div>
     </header>
     <!--header.main-header
     .main-header__content.main-content
