--- a/public/long-form.html
+++ b/public/long-form.html
@@ -34,11 +34,13 @@
         <button data-action="close" type="button" class="btn cookie-monster__close">Close</button>
       </div>
     </div>
-    <header class="styleguide--header mockup">
-      <div class="styleguide--header--content"><a href="index.html"><img src="assets/images/ca-logo-hz-white-280px.svg"></a></div>
-    </header>
+    <!--header.styleguide--header.mockup
+    .styleguide--header--content
+    	a(href="index.html")
+    		img(src="assets/images/ca-logo-hz-white-280px.svg")
+    -->
     <header class="main-header">
-      <div class="main-header__content"><a href="" title="Citizens Advice home" class="main-header__logo no-print"><img alt="Citizens Advice" src="assets/images/ca-logo_100px.svg"></a><a href="" title="Citizens Advice home" class="main-header__logo no-print wide"><img alt="Citizens Advice" src="assets/images/ca-logo-hz-white-280px.svg"></a><a href="" title="Citizens Advice home" class="main-header__logo print-only"><img alt="Citizens Advice" src="assets/images/ca-logo-hz-280px.svg"></a>
+      <div class="main-header__content"><a href="index.html" title="Citizens Advice home" class="main-header__logo no-print"><img alt="Citizens Advice" src="assets/images/ca-logo_100px.svg"></a><a href="index.html" title="Citizens Advice home" class="main-header__logo no-print wide"><img alt="Citizens Advice" src="assets/images/ca-logo-hz-white-280px.svg"></a><a href="index.html" title="Citizens Advice home" class="main-header__logo print-only"><img alt="Citizens Advice" src="assets/images/ca-logo-hz-280px.svg"></a>
         <div data-track-zone="top-bar" class="main-header__links"><a href="" class="main-header__menu-link js-toggle-menu"><i class="icon-menu"></i>Menu</a>
           <nav class="main-header__top-nav"><a href="#">Cymraeg</a></a><a href="" class="hide-offline main-header__login"><i class="icon-key"></i>Sign-in</a></nav>
           <form action="" class="main-header__search hide-offline">
