Fixes to typohraphy.jade

--- a/public/typography.html
+++ b/public/typography.html
@@ -57,11 +57,11 @@
               <p style="font-weight: 700;">Open Sans 700 <span class="code">@font-weight-bolder</span></p>
               <p style="font-weight: 800;">Open Sans 800 <span class="code">@font-weight-boldest</span></p>
               <p>Typographic styles for content specific pages. See <a href="#">content guidelines</a> for how to write content.</p>
-              <h1>h1 for page titles<span class="code">@font-size-h1</span></h1>
-              <h2>h2 sub header, for section titles<span class="code">@font-size-h2</span></h2>
-              <h3>h3 for headings within sections<span class="code">@font-size-h3</span></h3>
-              <h4>h4<span class="code">@font-size-h4</span></h4>
-              <h5>h5<span class="code">@font-size-h5</span></h5>
+              <h1>h1 for page titles <span class="code">@font-size-h1</span></h1>
+              <h2>h2 sub header, for section titles <span class="code">@font-size-h2</span></h2>
+              <h3>h3 for headings within sections <span class="code">@font-size-h3</span></h3>
+              <h4>h4 <span class="code">@font-size-h4</span></h4>
+              <h5>h5 <span class="code">@font-size-h5</span></h5>
               <p class="u-lede">This is a lead paragraph of text. Only use one of these per page, or not at all. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<span class="code">@u-lede</span></p>
               <p>This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
               <h2>Sub header, for introducing content sections</h2>
@@ -69,14 +69,24 @@
               <h3>h3 header within sub header</h3>
               <p>This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
               <h3>Links</h3>
-              <ul>
-                <li>This is a standard text <a href="#">with a link</a> and an external.</li>
-                <li>This is a standard text <a href="#" class="a-external-link">with an external link</a>.<span class="codea-external-link"></span></span></li>
-                <li>This is a standard text <a href="#" class="a-pdf-doc">with a link to a pdf document</a>.<span class="codea-pdf-doc"></span></span></li>
-                <li>This is a standard text <a href="#" class="a-file-doc">with a link to a html or text file</a>.<span class="codea-file-doc"></span></span></li>
-                <li>This is a standard text <a href="#" class="a-word-doc">with a link to a word document</a>.<span class="codea-word-doc"></span></span></li>
-                <li>This is a standard text <a href="#" class="a-excel-doc">with a link to a excel document</a>.<span class="codea-excel-doc"></span></span></li>
-              </ul>
+              <div class="example-box-plain">
+                <ul>
+                  <li>This is a standard text <a href="#">with a link</a> and an external.</li>
+                  <li>This is a standard text <a href="#" class="a-external-link">with an external link</a>.</li>
+                  <li>This is a standard text <a href="#" class="a-pdf-doc">with a link to a pdf document</a>.</li>
+                  <li>This is a standard text <a href="#" class="a-file-doc">with a link to a html or text file</a>.</li>
+                  <li>This is a standard text <a href="#" class="a-word-doc">with a link to a word document</a>.</li>
+                  <li>This is a standard text <a href="#" class="a-excel-doc">with a link to a excel document</a>.</li>
+                </ul>
+              </div>
+              <pre><code class="language-html">&lt;ul&gt;
+	&lt;li&gt;This is a standard text &lt;a href="#"&gt;with a link&lt;/a&gt; and an external.&lt;/li&gt;
+	&lt;li&gt;This is a standard text &lt;a href="#" class="a-external-link"&gt;with an external link&lt;/a&gt;.&lt;span class="codea-external-link"&gt;&lt;/span&gt;&lt;/li&gt;
+	&lt;li&gt;This is a standard text &lt;a href="#" class="a-pdf-doc"&gt;with a link to a pdf document&lt;/a&gt;.&lt;span class="codea-pdf-doc"&gt;&lt;/span&gt;&lt;/li&gt;
+	&lt;li&gt;This is a standard text &lt;a href="#" class="a-file-doc"&gt;with a link to a html or text file&lt;/a&gt;.&lt;span class="codea-file-doc"&gt;&lt;/span&gt;&lt;/li&gt;
+	&lt;li&gt;This is a standard text &lt;a href="#" class="a-word-doc"&gt;with a link to a word document&lt;/a&gt;.&lt;span class="codea-word-doc"&gt;&lt;/span&gt;&lt;/li&gt;
+	&lt;li&gt;This is a standard text &lt;a href="#" class="a-excel-doc"&gt;with a link to a excel document&lt;/a&gt;.&lt;span class="codea-excel-doc"&gt;&lt;/span&gt;&lt;/li&gt;
+&lt;/ul&gt;</code></pre>
               <h3>Standard unordered list</h3>
               <ul>
                 <li>Lorem ipsum dolor sit amet</li>
