--- a/public/pip-dressing.html
+++ b/public/pip-dressing.html
@@ -277,31 +277,9 @@
               <ul>
                 <li class="side-nav-beta__sibling"><a href="#" title="General Advice" item.="item.">General Advice</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q2 About your health conditions or disabilities" class="-current" item.="item.">Q2 About your health conditions or disabilities</a>
-                </li>
                 <li class="side-nav-beta__sibling"><a href="#" title="Q3 Preparing Food" item.="item.">Q3 Preparing Food</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q4 Eating and drinking" item.="item.">Q4 Eating and drinking</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q5 Managing treatments" item.="item.">Q5 Managing treatments</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q6 Washing and bathing" item.="item.">Q6 Washing and bathing</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q7 Managing toilet needs" item.="item.">Q7 Managing toilet needs</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q8 Dressing and undressing" item.="item.">Q8 Dressing and undressing</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q9 Communicating" item.="item.">Q9 Communicating</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q10 Reading" item.="item.">Q10 Reading</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q11 Mixing with other people" item.="item.">Q11 Mixing with other people</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q12 Making decisions about money" item.="item.">Q12 Making decisions about money</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q13 Going out" item.="item.">Q13 Going out</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q14 Moving around" item.="item.">Q14 Moving around</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Q8 Dressing and undressing" class="-current" item.="item.">Q8 Dressing and undressing</a>
                 </li>
               </ul>
             </li>
