--- a/public/adviser-real.html
+++ b/public/adviser-real.html
@@ -25,6 +25,13 @@
     <script src="../libs/javascript/collapse.js"></script>
     <script src="../libs/vendors/prism/prism.js"></script>
     <script src="../libs/javascript/smooth.js"></script>
+    <script>
+      var filename = document.location.pathname.match(/[^\/]+$/)[0];
+      $(document).ready(function() {
+      	$('.side-nav-beta a[href="' + filename + '"]').addClass('-current');
+      });
+      
+    </script>
   </head>
   <body><!--[if IE 8]><div class="ie8"><![endif]-->
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
@@ -274,7 +281,7 @@
             <li class="side-nav-beta__heading -active -open"><a><span>Section title</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="#" title="Check if you're eligible for Universal Credit" class="-current" item.="item.">Check if you're eligible for Universal Credit</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Check if you're eligible for Universal Credit" class="-current">Check if you're eligible for Universal Credit</a>
                 </li>
               </ul>
             </li>
