--- a/public/adviser-tool-logged-out.html
+++ b/public/adviser-tool-logged-out.html
@@ -25,6 +25,13 @@
     <script src="../libs/javascript/collapse.js"></script>
     <script src="../libs/vendors/prism/prism.js"></script>
     <script src="../libs/javascript/smooth.js"></script>
+    <script>
+      var filename = document.location.pathname.match(/[^\/]+$/)[0];
+      $(document).ready(function() {
+      	$('.side-nav-beta a[href="' + filename + '"]').addClass('-current');
+      });
+      
+    </script>
   </head>
   <body><!--[if IE 8]><div class="ie8"><![endif]-->
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
@@ -71,9 +78,9 @@
             <li class="side-nav-beta__heading -active -open"><a><span>Section title</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="adviser-logged-out.html" title="Content page" item.="item.">Content page</a>
+                <li class="side-nav-beta__sibling"><a href="adviser-logged-out.html" title="Content page">Content page</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="adviser-tool.html" title="Advice tool" class="-current" item.="item.">Advice tool</a>
+                <li class="side-nav-beta__sibling"><a href="adviser-tool.html" title="Advice tool" class="-current">Advice tool</a>
                 </li>
               </ul>
             </li>
