--- a/public/long-form.html
+++ b/public/long-form.html
@@ -25,6 +25,13 @@
     <script src="../libs/javascript/collapse.js"></script>
     <script src="../libs/vendors/prism/prism.js"></script>
     <script src="../libs/javascript/smooth.js"></script>
+    <script>
+      var filename = document.location.pathname.match(/[^\/]+$/)[0];
+      $(document).ready(function() {
+      	$('.side-nav-beta a[href="' + filename + '"]').addClass('-current');
+      });
+      
+    </script>
   </head>
   <body><!--[if IE 8]><div class="ie8"><![endif]-->
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
@@ -399,13 +406,13 @@
             <li class="side-nav-beta__heading -active -open"><a><span>Home improvements</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="#" title="Before you get building work done" class="-current" item.="item.">Before you get building work done</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Before you get building work done" class="-current">Before you get building work done</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Problem with building work, decorating or home improvements" item.="item.">Problem with building work, decorating or home improvements</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Problem with building work, decorating or home improvements">Problem with building work, decorating or home improvements</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Cancelling building or decorating work" item.="item.">Cancelling building or decorating work</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Cancelling building or decorating work">Cancelling building or decorating work</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Building organisations" item.="item.">Building organisations</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Building organisations">Building organisations</a>
                 </li>
               </ul>
             </li>
