--- a/public/pip-contents.html
+++ b/public/pip-contents.html
@@ -25,6 +25,13 @@
     <script src="../libs/javascript/collapse.js"></script>
     <script src="../libs/vendors/prism/prism.js"></script>
     <script src="../libs/javascript/smooth.js"></script>
+    <script>
+      var filename = document.location.pathname.match(/[^\/]+$/)[0];
+      $(document).ready(function() {
+      	$('.side-nav-beta a[href="' + filename + '"]').addClass('-current');
+      });
+      
+    </script>
   </head>
   <body><!--[if IE 8]><div class="ie8"><![endif]-->
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
@@ -143,19 +150,19 @@
             <li class="side-nav-beta__heading -active -open"><a><span>Help with your PIP claim</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="#" title="How to claim PIP" item.="item.">How to claim PIP</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="How to claim PIP">How to claim PIP</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Help filling in your PIP2 form" class="-current" item.="item.">Help filling in your PIP2 form</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Help filling in your PIP2 form" class="-current">Help filling in your PIP2 form</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="How to claim PIP if you have a terminal illness" item.="item.">How to claim PIP if you have a terminal illness</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="How to claim PIP if you have a terminal illness">How to claim PIP if you have a terminal illness</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="How to fill in your claim form" item.="item.">How to fill in your claim form</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="How to fill in your claim form">How to fill in your claim form</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Getting evidence to support your PIP claim" item.="item.">Getting evidence to support your PIP claim</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Getting evidence to support your PIP claim">Getting evidence to support your PIP claim</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Preparing for your PIP assessment" item.="item.">Preparing for your PIP assessment</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Preparing for your PIP assessment">Preparing for your PIP assessment</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Changes that affect your PIP" item.="item.">Changes that affect your PIP</a>
+                <li class="side-nav-beta__sibling"><a href="#" title="Changes that affect your PIP">Changes that affect your PIP</a>
                 </li>
               </ul>
             </li>
