--- a/public/typography.html
+++ b/public/typography.html
@@ -25,6 +25,13 @@
     <script src="../libs/javascript/collapse.js"></script>
     <script src="../libs/vendors/prism/prism.js"></script>
     <script src="../libs/javascript/smooth.js"></script>
+    <script>
+      var filename = document.location.pathname.match(/[^\/]+$/)[0];
+      $(document).ready(function() {
+      	$('.side-nav-beta a[href="' + filename + '"]').addClass('-current');
+      });
+      
+    </script>
   </head>
   <body><!--[if IE 8]><div class="ie8"><![endif]-->
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
@@ -118,19 +125,19 @@
             <li class="side-nav-beta__heading -active -open"><a><span>Styles</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="typography.html" title="Typography" class="-current" item.="item.">Typography</a>
+                <li class="side-nav-beta__sibling"><a href="typography.html" title="Typography">Typography</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="colours.html" title="Colours" item.="item.">Colours</a>
+                <li class="side-nav-beta__sibling"><a href="colours.html" title="Colours">Colours</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="tables.html" title="Tables" item.="item.">Tables</a>
+                <li class="side-nav-beta__sibling"><a href="tables.html" title="Tables">Tables</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="buttons.html" title="Buttons" item.="item.">Buttons</a>
+                <li class="side-nav-beta__sibling"><a href="buttons.html" title="Buttons">Buttons</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="fields.html" title="Fields" item.="item.">Fields</a>
+                <li class="side-nav-beta__sibling"><a href="fields.html" title="Fields">Fields</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="field-groups.html" title="Field groups" item.="item.">Field groups</a>
+                <li class="side-nav-beta__sibling"><a href="field-groups.html" title="Field groups">Field groups</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="new-grid.html" title="Grid" item.="item.">Grid</a>
+                <li class="side-nav-beta__sibling"><a href="new-grid.html" title="Grid">Grid</a>
                 </li>
               </ul>
             </li>
