Created template snippets for two sidebars

--- a/public/callout.html
+++ b/public/callout.html
@@ -247,7 +247,7 @@
             <li class="side-nav-beta__heading -active -open"><a><span>Modules</span></a></li>
             <li>
               <ul>
-                <li class="side-nav-beta__sibling"><a href="callout.html" title="Callout" class="-current">Callout</a>
+                <li class="side-nav-beta__sibling"><a href="callout.html" title="Callout">Callout</a>
                 </li>
                 <li class="side-nav-beta__sibling"><a href="collapse.html" title="Collapse">Collapse</a>
                 </li>
