Added sidebar snippet to all styles files

--- a/public/buttons.html
+++ b/public/buttons.html
@@ -158,7 +158,7 @@
                 </li>
                 <li class="side-nav-beta__sibling"><a href="tables.html" title="Tables">Tables</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="buttons.html" title="Buttons" class="-current">Buttons</a>
+                <li class="side-nav-beta__sibling"><a href="buttons.html" title="Buttons">Buttons</a>
                 </li>
                 <li class="side-nav-beta__sibling"><a href="fields.html" title="Fields">Fields</a>
                 </li>
