--- a/public/colours.html
+++ b/public/colours.html
@@ -273,7 +273,7 @@
               <ul>
                 <li class="side-nav-beta__sibling"><a href="typography.html" title="Typography">Typography</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="colours.html" title="Colours" class="-current">Colours</a>
+                <li class="side-nav-beta__sibling"><a href="colours.html" title="Colours">Colours</a>
                 </li>
                 <li class="side-nav-beta__sibling"><a href="tables.html" title="Tables">Tables</a>
                 </li>
