--- a/public/fields.html
+++ b/public/fields.html
@@ -386,7 +386,7 @@
                 </li>
                 <li class="side-nav-beta__sibling"><a href="buttons.html" title="Buttons">Buttons</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="fields.html" title="Fields" class="-current">Fields</a>
+                <li class="side-nav-beta__sibling"><a href="fields.html" title="Fields">Fields</a>
                 </li>
                 <li class="side-nav-beta__sibling"><a href="field-groups.html" title="Field groups">Field groups</a>
                 </li>
