--- a/public/field-groups.html
+++ b/public/field-groups.html
@@ -221,7 +221,7 @@
                 </li>
                 <li class="side-nav-beta__sibling"><a href="fields.html" title="Fields">Fields</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="field-groups.html" title="Field groups" class="-current">Field groups</a>
+                <li class="side-nav-beta__sibling"><a href="field-groups.html" title="Field groups">Field groups</a>
                 </li>
                 <li class="side-nav-beta__sibling"><a href="new-grid.html" title="Grid">Grid</a>
                 </li>
