--- a/public/new-grid.html
+++ b/public/new-grid.html
@@ -220,7 +220,7 @@
                 </li>
                 <li class="side-nav-beta__sibling"><a href="field-groups.html" title="Field groups">Field groups</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="new-grid.html" title="Grid" class="-current">Grid</a>
+                <li class="side-nav-beta__sibling"><a href="new-grid.html" title="Grid">Grid</a>
                 </li>
               </ul>
             </li>
