Added sidebar snippet to all modules files

--- a/public/charts.html
+++ b/public/charts.html
@@ -330,7 +330,7 @@
                 </li>
                 <li class="side-nav-beta__sibling"><a href="collapse.html" title="Collapse">Collapse</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="charts.html" title="Charts" class="-current">Charts</a>
+                <li class="side-nav-beta__sibling"><a href="charts.html" title="Charts">Charts</a>
                 </li>
                 <li class="side-nav-beta__sibling"><a href="section-notice.html" title="Section Notices">Section Notices</a>
                 </li>
