--- a/public/collapse.html
+++ b/public/collapse.html
@@ -164,7 +164,7 @@
               <ul>
                 <li class="side-nav-beta__sibling"><a href="callout.html" title="Callout">Callout</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="collapse.html" title="Collapse" class="-current">Collapse</a>
+                <li class="side-nav-beta__sibling"><a href="collapse.html" title="Collapse">Collapse</a>
                 </li>
                 <li class="side-nav-beta__sibling"><a href="charts.html" title="Charts">Charts</a>
                 </li>
