--- a/public/overlay.html
+++ b/public/overlay.html
@@ -94,7 +94,7 @@
                 </li>
                 <li class="side-nav-beta__sibling"><a href="extent.html" title="Extent Switcher">Extent Switcher</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="overlay.html" title="Modal/Overlay" class="-current">Modal/Overlay</a>
+                <li class="side-nav-beta__sibling"><a href="overlay.html" title="Modal/Overlay">Modal/Overlay</a>
                 </li>
                 <li class="side-nav-beta__sibling"><a href="reference.html" title="Reference tool">Reference tool</a>
                 </li>
