--- a/public/toolbar.html
+++ b/public/toolbar.html
@@ -75,7 +75,7 @@
                 </li>
                 <li class="side-nav-beta__sibling"><a href="section-notice.html" title="Section Notices">Section Notices</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="toolbar.html" title="Content toolbar" class="-current">Content toolbar</a>
+                <li class="side-nav-beta__sibling"><a href="toolbar.html" title="Content toolbar">Content toolbar</a>
                 </li>
                 <li class="side-nav-beta__sibling"><a href="cookie-monster.html" title="Cookie Monster">Cookie Monster</a>
                 </li>
