--- a/public/cookie-monster.html
+++ b/public/cookie-monster.html
@@ -96,7 +96,7 @@
                 </li>
                 <li class="side-nav-beta__sibling"><a href="toolbar.html" title="Content toolbar">Content toolbar</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="cookie-monster.html" title="Cookie Monster" class="-current">Cookie Monster</a>
+                <li class="side-nav-beta__sibling"><a href="cookie-monster.html" title="Cookie Monster">Cookie Monster</a>
                 </li>
                 <li class="side-nav-beta__sibling"><a href="extent.html" title="Extent Switcher">Extent Switcher</a>
                 </li>
