--- a/public/extent.html
+++ b/public/extent.html
@@ -121,7 +121,7 @@
                 </li>
                 <li class="side-nav-beta__sibling"><a href="cookie-monster.html" title="Cookie Monster">Cookie Monster</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="extent.html" title="Extent Switcher" class="-current">Extent Switcher</a>
+                <li class="side-nav-beta__sibling"><a href="extent.html" title="Extent Switcher">Extent Switcher</a>
                 </li>
                 <li class="side-nav-beta__sibling"><a href="overlay.html" title="Modal/Overlay">Modal/Overlay</a>
                 </li>
