--- a/public/section-notice.html
+++ b/public/section-notice.html
@@ -116,7 +116,7 @@
                 </li>
                 <li class="side-nav-beta__sibling"><a href="charts.html" title="Charts">Charts</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="section-notice.html" title="Section Notices" class="-current">Section Notices</a>
+                <li class="side-nav-beta__sibling"><a href="section-notice.html" title="Section Notices">Section Notices</a>
                 </li>
                 <li class="side-nav-beta__sibling"><a href="toolbar.html" title="Content toolbar">Content toolbar</a>
                 </li>
