Amend PIP content, merge err

--- a/public/pip-dressing.html
+++ b/public/pip-dressing.html
@@ -284,37 +284,9 @@
               <ul>
                 <li class="side-nav-beta__sibling"><a href="#" title="General Advice">General Advice</a>
                 </li>
-<<<<<<< HEAD
-                <li class="side-nav-beta__sibling"><a href="#" title="Q3 Preparing Food" item.="item.">Q3 Preparing Food</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q8 Dressing and undressing" class="-current" item.="item.">Q8 Dressing and undressing</a>
-=======
-                <li class="side-nav-beta__sibling"><a href="#" title="Q2 About your health conditions or disabilities" class="-current">Q2 About your health conditions or disabilities</a>
-                </li>
                 <li class="side-nav-beta__sibling"><a href="#" title="Q3 Preparing Food">Q3 Preparing Food</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q4 Eating and drinking">Q4 Eating and drinking</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q5 Managing treatments">Q5 Managing treatments</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q6 Washing and bathing">Q6 Washing and bathing</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q7 Managing toilet needs">Q7 Managing toilet needs</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q8 Dressing and undressing">Q8 Dressing and undressing</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q9 Communicating">Q9 Communicating</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q10 Reading">Q10 Reading</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q11 Mixing with other people">Q11 Mixing with other people</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q12 Making decisions about money">Q12 Making decisions about money</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q13 Going out">Q13 Going out</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="#" title="Q14 Moving around">Q14 Moving around</a>
->>>>>>> 379892b45bdeb89b6a260e854356b29ca3767c28
+                <li class="side-nav-beta__sibling"><a href="#" title="Q8 Dressing and undressing" class="-current">Q8 Dressing and undressing</a>
                 </li>
               </ul>
             </li>
