Tidy up caption

--- a/public/notices.html
+++ b/public/notices.html
@@ -69,16 +69,16 @@
           </div>
           <div class="articleContent">
             <div>
-              <p>Developing a more definitive approach to notice headings.</p>
-              <h2>Heading types</h2>
+              <p>Developing a more definitive approach to notice headings, to be clearer for visitors and to avoid distracting from the primary objective of engaging with content.</p>
+              <h2>Section notice types</h2>
               <h3>Survey notice</h3>
                 <ul>
-                  <li>used in discovery phase of epic</li>
+                  <li>can be used in the discovery phase of epic</li>
                   <li>used in heading of all content areas that could be changing</li>
                 </ul>
-              <h3>Updated notice</h3>
+              <h3>New notice</h3>
                 <ul>
-                  <li>used on all new content</li>
+                  <li>used on all entirely new content (not amended or updated)</li>
                   <li>automatically removed after 6 weeks</li>
                 </ul>
             </div>
@@ -107,7 +107,7 @@
                 </li>
                 <li class="side-nav-beta__sibling"><a href="reference.html" title="Reference tool">Reference tool</a>
                 </li>
-                <li class="side-nav-beta__sibling"><a href="cards.html" class="-current" title="Cards">Cards</a>
+                <li class="side-nav-beta__sibling"><a href="cards.html" class="-current" title="Notices">Notices</a>
                 </li>
               </ul>
             </li>
