--- a/public/typography.html
+++ b/public/typography.html
@@ -117,6 +117,12 @@
                 </li>
                 <li>Lorem ipsum dolor sit amet</li>
               </ol>
+              <ul class="tick">
+                <li>Lorem ipsum dolor sit amet</li>
+              </ul>
+              <ul class="cross">
+                <li>Lorem ipsum dolor sit amet</li>
+              </ul>
             </div>
           </div>
         </div>
