--- a/public/captions.html
+++ b/public/captions.html
@@ -59,8 +59,8 @@
             <div>
               <p>Developing a semantically correct approach to handling descriptions for images and charts, showing clearly the relationship between the two.</p>
               <h3>When to use</h3>
-              <p>This approach should be used to when illustrations, diagrams, photos, code listings, etc would benefit from a more detailed descriptor to explain. This also includes reference sources or crediting.</p>
-              <p>It isn't always neccessary and images with correctly structured alt tags may also be appropriate.</p>
+              <p>This approach should be used to when illustrations, diagrams, photos, code listings, etc would benefit from a more detailed descriptor to explain. This also includes reference to sources or credits where applicable.</p>
+              <p>It isn't always neccessary and images with correctly structured alt attributes may also be appropriate.</p>
               <h4>Figure</h4>
               <p>The object is a container for a user interface element such as a table, chart, or image and a caption which labels the element</p>
               <h4>Caption</h4>
@@ -78,21 +78,20 @@
 &lt;img src="assets/images/CAB-training-session.jpg" alt=""&gt;
 &lt;figcaption&gt;Advisers being trained in a local Citizens Advice.&lt;/figcaption&gt;
 &lt;/figure&gt;</code></pre>
-              <h4>Alt tags</h4>
-              <p>Alt tags should be considered as image replacements, though not solely for the purpose of screenreaders, though their benefit for this use is very high, they can also be used in case a person is on a low bandwidth.</p>
-              <p>When considering what to use as a description in an alt tag, always think of the context, where is it on the page and what is the image conveying? <a href="http://webaim.org/techniques/alttext/" class="a-external-link" target="_blank"> WebAIM has some examples</a></p>
+              <h4>Alt attributes</h4>
+              <p>Alt attributes should be considered as image replacements, though not solely for the purpose of screenreaders, though their benefit for this use is very high, they can also be used in case a person is on a low bandwidth.</p>
+              <p>When considering what to use as a description in an alt tag, always think of the context, where is it on the page and what is the image conveying? You can use <a href="http://dev.w3.org/html5/alt-techniques/#tree"  class="a-external-link" target="_blank">this simple design tree</a> to help decide whether to use <a href="http://webaim.org/techniques/alttext/" class="a-external-link" target="_blank"> WebAIM also has some examples</a> of how best to describe images in alt attributes.</p>
               <p>You can add a link from the image to a description further down the page, which can be read by a screenreader, but this could affect the flow for the user. In this instance it is best to use an alt label of just the question. It will enable the screenreader user to understand what is being explained below without adding confusion.</p>
               <div class="example-box-plain">
                 <label for="buttonDescription">Alt</label>
                 <figure>
-                  <a id ="#image-description" class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a><img src="assets/images/PIP2-form-Q3b.jpg" alt="">
+                  <img src="assets/images/PIP2-form-Q3b.jpg" alt="PIP Form question 3b. Do you need help from another person to prepare or cook a simple meal?">
                 </figure>
               </div>
               <pre><code class="language-html">&lt;figure&gt;
-&lt;img src="assets/images/PIP2-form-Q3b.jpg" alt=""&gt;
-&lt;figcaption&gt;PIP Form question 3b. Do you need help from another person to prepare or cook a simple meal?&lt;/figcaption&gt;
+&lt;img src="assets/images/PIP2-form-Q3b.jpg" alt="PIP Form question 3b. Do you need help from another person to prepare or cook a simple meal?"&gt;
 &lt;/figure&gt;</code></pre>
-            </div>
+              </div>
           </div>
         </div>
         <nav class="side-nav-beta">
