--- a/public/descriptions.html
+++ b/public/descriptions.html
@@ -6,7 +6,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta name="keywords">
     <meta name="description">
-    <title>Citizens Advice style guide - Notice development
+    <title>Citizens Advice style guide - Descriptions
     </title>
     <!-- Mobile Specific Metas-->
     <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
@@ -47,40 +47,45 @@
     -->
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#modules" title="Modules">Modules</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Cards</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#modules" title="Modules">Modules</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Descriptions</span>
         </div>
       </nav>
-      <aside class="section-notice--dev">
-        <h2 class="screenreader">Notice</h2>
-        <div class="section-notice--dev__changing">
-          <p><span class="badge">SURVEY</span> Help us to improve our [section] advice. Please <a href="#">complete our short survey</a>. It'll take about 5-10 minutes.</p>
-        </div>
-      </aside>
-      <aside class="section-notice--dev">
-        <h2 class="screenreader">Notice</h2>
-        <div class="section-notice--dev__content">
-          <p><span class="badge">NEW</span> This page is new – <a href="#">your feedback</a> will help us to improve it.</p>
-        </div>
-      </aside>
       <div class="main-content">
         <div id="main" role="main" class="main-content__right">
           <div class="title">
-            <h1 class="title__heading js-ref"><span class="title__title">Notice development</span></h1>
+            <h1 class="title__heading js-ref"><span class="title__title">Descriptions</span></h1>
           </div>
           <div class="articleContent">
             <div>
-              <p>Developing a more definitive approach to notice headings, to be clearer for visitors and to avoid distracting from the primary objective of engaging with content.</p>
-              <h2>Section notice types</h2>
-              <h3>Survey notice</h3>
-                <ul>
-                  <li>can be used in the discovery phase of epic</li>
-                  <li>used in heading of all content areas that could be changing</li>
-                </ul>
-              <h3>New notice</h3>
-                <ul>
-                  <li>used on all entirely new content (not amended or updated)</li>
-                  <li>automatically removed after 6 weeks</li>
-                </ul>
+              <p>Developing a semantically correct approach to handling descriptions for images and charts, showing clearly the relationship between the two.</p>
+              <h3>When to use</h3>
+              <p>This approach should be used to when illustrations, diagrams, photos, code listings, etc would benefit from a more detailed descriptor to explain. This also includes reference to sources or credits where applicable.</p>
+              <p>It isn't always neccessary and images with correctly structured alt attributes may also be appropriate.</p>
+              <h4>Figure</h4>
+              <p>The object is a container for a user interface element such as a table, chart, or image and a caption which labels the element</p>
+              <h4>Caption</h4>
+              <p>The object contains descriptive information, usually textual, about another user interface element such as a table, chart, or image.</p>
+              <div class="example-box-plain">
+                <label>Caption</label>
+                <figure><img src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice">
+                  <figcaption>Advisers being trained in a local Citizens Advice.</figcaption>
+                </figure>
+              </div>
+              <pre><code class="language-html">&lt;figure&gt;
+&lt;img src="assets/images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
+&lt;figcaption&gt;Advisers being trained in a local Citizens Advice.&lt;/figcaption&gt;
+&lt;/figure&gt;</code></pre>
+              <h4>Alt attributes</h4>
+              <p>Alt attributes should be considered as image replacements, though not solely for the purpose of screenreaders, though their benefit for this use is very high, they can also be used in case a person is on a low bandwidth.</p>
+              <p>When considering what to use as a description in an alt tag, always think of the context, where is it on the page and what is the image conveying? You can use <a href="http://dev.w3.org/html5/alt-techniques/#tree" target="_blank" class="a-external-link">this simple design tree</a> to help decide whether to use <a href="http://webaim.org/techniques/alttext/" target="_blank" class="a-external-link">WebAIM also has some examples</a> of how best to describe images in alt attributes.</p>
+              <p>You can add a link from the image to a description further down the page, which can be read by a screenreader, but this could affect the flow for the user. In this instance it is best to use an alt label of just the question. It will enable the screenreader user to understand what is being explained below without adding confusion.</p>
+              <div class="example-box-plain">
+                <label>Alt</label>
+                <figure><img src="assets/images/PIP2-form-Q3b.jpg" alt="PIP Form question 3b. Do you need help from another person to prepare or cook a simple meal?"></figure>
+              </div>
+              <pre><code class="language-html">&lt;figure&gt;
+&lt;img src="assets/images/PIP2-form-Q3b.jpg" alt="PIP Form question 3b. Do you need help from another person to prepare or cook a simple meal?"&gt;
+&lt;/figure&gt;</code></pre>
             </div>
           </div>
         </div>
@@ -106,8 +111,6 @@
                 <li class="side-nav-beta__sibling"><a href="overlay.html" title="Modal/Overlay">Modal/Overlay</a>
                 </li>
                 <li class="side-nav-beta__sibling"><a href="reference.html" title="Reference tool">Reference tool</a>
-                </li>
-                <li class="side-nav-beta__sibling"><a href="cards.html" class="-current" title="Notices">Notices</a>
                 </li>
               </ul>
             </li>
