Search page, html, amend

--- a/public/search.html
+++ b/public/search.html
@@ -40,6 +40,9 @@
         /*padding: .125rem .685rem .125rem .685rem;
         background-color: #F2F8FF;*/
     }
+    .breadcrumb a {
+        color: #537D2D;
+    }
     .breadcrumb__item > i {
         margin-right: 0rem;
         margin-left: 0.25rem;
