Update example and index page

--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,8 @@
                 <li><a href="colours.html">Colours</a></li>
                 <li><a href="tables.html">Tables</a></li>
                 <li><a href="new-grid.html">New grid layout</a></li>
+                <!--li-->
+                <!--	a(href="new-grid-examples.html") New grid examples-->
                 <li>
                   <h4 id="forms">Forms</h4>
                   <ul>
@@ -89,10 +91,16 @@
             <div class="span4">
               <h2 id="modules">Modules</h2>
               <ul>
+                <!--li-->
+                <!--	a(href="cards.html") Cards-->
                 <li><a href="callout.html">Callout</a></li>
                 <li><a href="collapse.html">Collapse</a></li>
                 <li><a href="charts.html">Charts</a></li>
+                <!--li-->
+                <!--	a(href="descriptions.html") Captions-->
                 <li><a href="section-notice.html">Section Notices</a></li>
+                <!--li-->
+                <!--	a(href="section-notice-dev.html") Section Notice Development-->
                 <li><a href="toolbar.html">Content toolbar</a></li>
                 <li><a href="cookie-monster.html">Cookie Monster</a></li>
                 <li> 
@@ -113,6 +121,17 @@
                 <!--li-->
                 <!--	a(href="advisor.html") Advisor content-->
                 <li><a href="section-index.html">Section index</a></li>
+                <!--li-->
+                <!--	a(href="employment-checker.html") Example of in-content tool-->
+                <!-- Example PIP content  -->
+                <!--li-->
+                <!--	a(href="pip-index.html") Help with filling out PIP2 form-->
+                <!--li-->
+                <!--	a(href="pip-contents.html") PIP contents page-->
+                <!--li-->
+                <!--	a(href="pip-dressing.html") PIP help with getting dressed question-->
+                <!--li-->
+                <!--	a(href="pip-cooking.html") PIP preparing and cooking food question-->
               </ul>
             </div>
           </div>
