--- a/public/new-grid.html
+++ b/public/new-grid.html
@@ -59,7 +59,7 @@
             <div class="row">
               <div class="span12">
                 <p>The default page width is 1080px with a 12-column grid. It is recommended for most content to use the two-thirds (content first) layout. This restricts line length to a more managable size and encourages a better reading pattern, <a href="#">improving cognition</a>.</p>
-                <p>The layout for pages should be 12 columns (full width), 3 or 4 column, other variations can be used if needed.</p>
+                <p>The layout for pages should be 12 columns (full width), 3 or 4 column, other variations can be used if needed. <a href="new-grid-examples.html" target="_blank">Examples of grid using text</a>.</p>
               </div>
             </div>
             <div class="row">
