Add jade build process

--- a/public/pip-contents.html
+++ b/public/pip-contents.html
@@ -78,7 +78,7 @@
           </div>
           <div class="articleContent">
             <div>
-              <div class="steps"><a href="#" class="steps__link"></a><span class="steps--number">1</span><b>Check if you need permission or approval</b>
+              <div class="steps"><a href="#" class="steps__link"><span class="steps--number">1</span></a><b>Check if you need permission or approval</b>
                 <p>Avoid costly penalties by checking if you need building regulations approval for home improvements, planning permission for building work, or permission as a leaseholder.]</p>
               </div>
               <p>Making a claim for the benefit Personal Independence Payment (PIP) can take a long time time. It can often take up to 4 months from starting the application to getting your money (if you’re <a href="#">terminally ill</a> your claim will be processed more quickly).</p>
