Dev: Update home visual Fill with placeholder content add images.

--- a/public/modules/sticky.html
+++ b/public/modules/sticky.html
@@ -72,7 +72,7 @@
   <body><!--[if IE 8]><div class="ie8"><![endif]-->
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
     <header class="styleguide--header">
-      <div class="styleguide--header--content"><a href="index.html"><img src="../images/ca-logo-hz-white-280px.svg"></a></div>
+      <div class="styleguide--header--content"><a href="../index.html" style="border: none;"><img src="../images/ca-logo-hz-white-280px.svg"></a></div>
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
@@ -130,13 +130,13 @@
         </div>
       </div>
     </div>
-    <footer data-track-zone="footer" id="footer" class="main-footer">
-      <div class="styleguide--footer">
-        <div>
-          <p><img alt="" height="100" src="../images/ca-logo_100px.svg" width="100">Copyright © 2016 Citizens Advice. All rights reserved.<br>Citizens Advice is an operating name of the National Association of Citizens Advice Bureaux. Registered charity number 279057<br>VAT number 726 0202 76 Company limited by guarantee. Registered number 1436945 England<br>Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD</p>
+    <div id="footer" data-track-zone="footer" class="main-footer">
+      <div class="footer--legal">
+        <div class="footer--legal--content"><img alt="" src="../images/ca_wo-logo-100px.svg">
+          <p>Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.<br>Registered charity number 279057; Registered in England 1436945; VAT number GB726020276. 3rd Floor North, 200 Aldersgate, London, EC1A 4HD</p>
         </div>
       </div>
-    </footer>
+    </div>
     <!-- Code changed, not using here as implimented through cms-->
     <!--.notice
     .notice__content
